# agent-ltm-persistence-layer

./: .env.example  .gitignore  README.md  docker-compose.yml  init.sql  pyproject.toml  pyrightconfig.json
.run/: FastAPI Server.run.xml
app/: main.py
app/api/: dependencies.py  schemas.py
app/api/routes/: chat.py  memories.py  memory.py  structured_memories.py
app/config/: lifespan.py  logging_config.py  settings.py
app/core/: __init__.py  base.py  graph.py  memory_schemas.py  models.py  namespace_builder.py  schema_registry.py  schemas.py  services.py  store.py  tools.py
app/infrastructure/: database.py  models.py  repository.py  store.py
app/infrastructure/memory/: langmem_store.py
app/services/: __init__.py  service.py
docs/: api.md  integrations.md  setup.md  testing.md
tests/api/: conftest.py  test_chat_endpoints.py  test_structured_memory_endpoints.py
tests/integration/: test_agent_service.py  test_langmem_store.py  test_structured_memory.py
tests/unit/: conftest.py  mocks.py  test_memory_schemas.py  test_memory_service.py
